# Veränderungen von kivitendo #
###############################

20??-??-?? - Release ?.?.?

Mittelgroße neue Features:

 - Der Import von Bankauszügen im MT940-Format wurde komplett neu
   geschrieben. Das externe Programm AQBanking wird nun nicht mehr
   benötigt.
 - Lupe für Projekt-Picker, über die ein Auswahl-Dialog geöffnet werden
   kann.

Kleinere neue Features und Detailverbesserungen:

 - In der Mandantenkonfiguration ist einstellbar, ob UStID oder Steuernummer
   für Kunden oder Lieferanten eindeutig sein sollen.
 - Menü und Rechte für Produktivität: Zugriffskontrolle aufgeteilt und
   Rechte unterhalb "Produktivität" als eigene Kategorie
 - Inventur-Makse: Part-Picker sucht auch nach Lieferanten-Artikelnummer
 - Einkaufs-/Verkaufsbelege und Buchungsmasken: Neues Feld Leistungsdatum,
   welches die Steuerberechnung beeinflusst. I.d.R. gilt für die Steuer:
   Leistungsdatum. Wenn leer, dann Lieferdatum; wenn leer, dann Belegdatum.
 - Neuer Order-Controller: Unterstützung für Übersetzungen von
   Artikeln wurde implementiert.
 - Einkaufs-/Verkaufsbelege: die Belegsprache ist nun als Auswahl
   direkt in der Hauptmaske vorhanden und nicht mehr in den
   Druckeinstellungen versteckt.
 - Einkaufsrechnungen: wenn das direkte Anlegen von Einkaufsrechnungen
   in der Mandantenkonfiguration deaktiviert war, gab es eine
   Fehlermeldung nach dem Verbuchen von Einkaufsrechnungen, weil auf
   die Maske zum Erfassen einer weiteren neuen Einkaufsrechnung
   weitergeleitet wurde.
 - Wiederkehrende Rechnung: beim automatischen Versand erzeugter
   Rechnungen per E-Mail können nun auch Rechnungsattribute als
   Variablen im Betreff & Text der E-Mails genutzt werden
   (z.B. <%invnumber%> für die Rechnungsnummer oder
   <%transaction_description%> für die Vorgangsbezeichnung).
 - Wiederkehrende Rechnungen: die optionale Zusammenfassungs-E-Mail
   enthält nun auch eine Auflistung von Rechnungsnummern, für die das