@@ -3878,6 +3878,7 @@ $self->{texts} = {
   'Updating the client fields in the database "#1" on host "#2:#3" failed.' => 'Die Aktualisierung der Mandantenfelder in der Datenbank "#1" auf Host "#2:#3" schlug fehl.',
   'Upload'                      => 'Aktualisieren',
   'Upload Attachments'          => 'Anhänge hochladen',
+  'Upload Documents'            => 'Dokumente hochladen',
   'Upload Images'               => 'Bilder hochladen',
   'Upload all marked'           => 'Markierte aktualisieren',
   'Upload file'                 => 'Datei hochladen',
@@ -4387,6 +4388,7 @@ $self->{texts} = {
   'unnamed record template'     => 'unbenannte Belegvorlage',
   'until'                       => 'bis',
   'uploaded'                    => 'Hochgeladen',
+  'uploaded Documents'          => 'Hochgeladene Dokumente',
   'use program settings'        => 'benutze Programmeinstellungen',
   'use user config'             => 'Verwende Benutzereinstellung',
   'used'                        => 'Verbraucht',
