@@ -3877,6 +3877,7 @@ $self->{texts} = {
   'Updating the client fields in the database "#1" on host "#2:#3" failed.' => '',
   'Upload'                      => '',
   'Upload Attachments'          => '',
+  'Upload Documents'            => '',
   'Upload Images'               => '',
   'Upload all marked'           => '',
   'Upload file'                 => '',
@@ -4386,6 +4387,7 @@ $self->{texts} = {
   'unnamed record template'     => '',
   'until'                       => '',
   'uploaded'                    => '',
+  'uploaded Documents'          => '',
   'use program settings'        => '',
   'use user config'             => '',
   'used'                        => '',
